--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Qodana Scan
         uses: JetBrains/qodana-action@v2024.3
         with:
-          pr-mode: false
+          pr-mode: true
           args: --apply-fixes
           push-fixes: pull-request
         env:
