--- a/.qodana.yaml
+++ b/.qodana.yaml
@@ -3,6 +3,6 @@ version: "1.0"
 profile:
   name: qodana.recommended
 
-linter: jetbrains/qodana-jvm:2024.1-eap
+linter: jetbrains/qodana-js:2024.3
 
 fixesStrategy: apply
