--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,29 +2,25 @@ name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   frontend:
     runs-on: ubuntu-latest
     name: Frontend (Installing Dependencies + Testing)
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: "16"
 
       - name: Install Frontend Dependencies
         run: |
           cd frontend
-          npm install
+          npm ci
 
       - name: Run Frontend Tests
         run: |
@@ -35,18 +31,16 @@ jobs:
     runs-on: ubuntu-latest
     name: Backend (Installing Dependencies + Testing)
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: "16"
 
       - name: Install Backend Dependencies
         run: |
           cd backend
-          npm install
+          npm ci
 
       - name: Run Backend Tests
         run: |
@@ -58,8 +52,7 @@ jobs:
     name: Security Scan (Trivy + Gitleaks)
     needs: [frontend, backend]
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install Trivy
         run: |
