update build server and backend code

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-ecs": "^3.806.0",
     "@clickhouse/client": "^1.11.1",
     "@octokit/rest": "^21.1.1",
     "axios": "^1.8.4",
