--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
