--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+    "name": "vortex",
     "scripts": {
-        "start-backend": "cd backend && npm run dev",
-        "start-frontend": "cd frontend && npm run dev"
+        "start-frontend": "cd frontend && npm run dev",
+        "start-backend": "cd backend && npm run dev"
+    },
+    "devDependencies": {
+        "npm-run-all": "^4.1.5"
     }
 }
