--- a/infra/ansible/inventory.ini
+++ b/infra/ansible/inventory.ini
@@ -1,4 +1,4 @@
 [kafka_nodes]
-node1 ansible_host=<IP_NODE_1> ansible_user=ubuntu
-node2 ansible_host=<IP_NODE_2> ansible_user=ubuntu
-node3 ansible_host=<IP_NODE_3> ansible_user=ubuntu
+node1 ansible_host=3.85.xxx.xxx ansible_user=ubuntu
+node2 ansible_host=54.234.xxx.xxx ansible_user=ubuntu
+node3 ansible_host=18.212.xxx.xxx ansible_user=ubuntu
