--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -1,57 +1,55 @@
+---
 - hosts: kafka_nodes
-  become: true
+  become: TRUE
+  vars:
+    kafka_version: "3.8.1"
+    kafka_dir: "/opt/kafka"
   tasks:
-    # Install prerequisites
-    - name: Update apt cache
+    - name: Install dependencies
       apt:
-        update_cache: yes
-        cache_valid_time: 3600
-
-    - name: Install required packages
-      apt:
-        name:
-          - git
-          - docker.io
-          - docker-compose
+        name: [openjdk-11-jdk, wget, tar]
         state: present
+        update_cache: yes
 
-    - name: Ensure Docker service is running
-      service:
-        name: docker
-        state: started
-        enabled: yes
+    - name: Download Kafka
+      get_url:
+        url: "https://downloads.apache.org/kafka/{{ kafka_version }}/kafka_2.13-{{ kafka_version }}.tgz"
+        dest: /tmp/kafka.tgz
 
-    # Clone repo
-    - name: Clone vortex repo
-      git:
-        repo: "https://github.com/rohithr018/rohithr018-vortex.git"
-        dest: /opt/vortex
-        version: main
+    - name: Extract Kafka
+      unarchive:
+        src: /tmp/kafka.tgz
+        dest: "{{ kafka_dir }}"
+        remote_src: yes
+        creates: "{{ kafka_dir }}/kafka_2.13-{{ kafka_version }}"
 
-    # Start Kafka
-    - name: Start Kafka services with Docker Compose
-      shell: |
-        cd /opt/vortex/services
-        docker compose up -d
-      args:
-        chdir: /opt/vortex/services
-
-    # Create Kafka topic
-    - name: Make create-topic.sh executable
+    - name: Symlink Kafka
       file:
-        path: /opt/vortex/services/create-topic.sh
-        mode: "0755"
+        src: "{{ kafka_dir }}/kafka_2.13-{{ kafka_version }}"
+        dest: "{{ kafka_dir }}/current"
+        state: link
+        force: yes
 
-    - name: Run create-topic.sh
+    - name: Configure Kafka properties
+      copy:
+        dest: "{{ kafka_dir }}/current/config/kraft/server.properties"
+        content: |
+          process.roles=broker,controller
+          node.id={{ ansible_hostname | regex_replace('[^0-9]', '') }}
+          listeners=PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+          advertised.listeners=PLAINTEXT://{{ ansible_host }}:9092
+          controller.listener.names=CONTROLLER
+          controller.quorum.voters=1@{{ hostvars['node1']['ansible_host'] }}:9093,2@{{ hostvars['node2']['ansible_host'] }}:9093,3@{{ hostvars['node3']['ansible_host'] }}:9093
+          inter.broker.listener.name=PLAINTEXT
+          log.dirs={{ kafka_dir }}/logs
+          offsets.topic.replication.factor=3
+          transaction.state.log.replication.factor=3
+          transaction.state.log.min.isr=2
+          group.initial.rebalance.delay.ms=0
+          auto.create.topics.enable=false
+
+    - name: Start Kafka service
       shell: |
-        cd /opt/vortex/services && ./create-topic.sh
-
-    # Run Benchmark
-    - name: Make benchmark-kafka.sh executable
-      file:
-        path: /opt/vortex/benchmark-kafka.sh
-        mode: "0755"
-
-    - name: Run benchmark script
-      shell: |
-        cd /opt/vortex && ./benchmark-kafka.sh
+        nohup {{ kafka_dir }}/current/bin/kafka-server-start.sh {{ kafka_dir }}/current/config/kraft/server.properties > /var/log/kafka.log 2>&1 &
+      async: 0
+      poll: 0
